fixes splash page overlap issue

--- a/scss/_grid-settings.scss
+++ b/scss/_grid-settings.scss
@@ -7,5 +7,5 @@ $grid-columns: 12;
 $max-width: 1070px;
 
 // Define your breakpoints
-$tablet: new-breakpoint(max-width 768px 8);
-$mobile: new-breakpoint(max-width 480px 4);
+//$tablet: new-breakpoint(max-width 768px 8);
+//$mobile: new-breakpoint(max-width 480px 4);
